feat: changes on 'Projects' section

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,26 @@
   }
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: #181c21;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #2d333a;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #353b42;
+}
+
+html {
+  scroll-behavior: smooth;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
